fix: remove next hidden overflow pattern

--- a/components/Speech/styles.module.css
+++ b/components/Speech/styles.module.css
@@ -4,9 +4,11 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin-top: 5rem;
+  margin-top: 10rem;
 }
-
+.speechAlign div {
+  overflow: visible !important;
+}
 .me {
   animation: fromBottomToPosition 3s;
 }
